[package]
name = "timegated"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["multipart"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
dotenv = "*"
chrono = "*"
tracing-subscriber = "0.2.22"
tower-http = {version = "*", features = ["full"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "*"
futures = "*"
mime = "*"
tree_magic_mini = "*"

[dev-dependencies]
tokio-util = "*"
reqwest = {version = "*", features = ["multipart"]}